# xenochi

./: .gitignore  CMakeLists.txt  README.md  build_temp.bat  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/app_car_gallery/: CMakeLists.txt  car_gallery_data.c  car_gallery_ui.c  gallery_animations.c  lvgl_app_car_gallery.cpp
components/app_gyroscope/: CMakeLists.txt  lvgl_app_gyroscope.cpp
components/app_mibuddy/: CMakeLists.txt  Kconfig  MOCHI_API.md  beep_8k_mono.c  chime_16k_mono.c  lvgl_app_mibuddy.cpp  lvgl_mibuddy.c  lvgl_mibuddy.h  mochi_anim.c  mochi_asset_play.c  mochi_audio.c  mochi_face.c  mochi_input.cpp  mochi_particles.c  mochi_sounds.c  mochi_state.c  motion_config.c  sound_braking.c  sound_face_down.c  sound_low_battery.c  weee_hahaha_16k.c
components/app_mibuddy/assets/: app_mibuddy_assets.h  icon_mibuddy.c
components/app_mibuddy/include/: lvgl_app_mibuddy.hpp  mochi_assets.h  mochi_input.h  mochi_sounds.h  mochi_state.h  mochi_theme.h  motion_config.h
components/app_music/: CMakeLists.txt  lvgl_app_music.cpp  lvgl_music.c  lvgl_music_list.c  lvgl_music_main.c
components/app_rec_test/: CMakeLists.txt  lvgl_app_rec.cpp
components/app_setting/: CMakeLists.txt  lvgl_app_setting.cpp  wifi_scan.c
components/audio_play/: CMakeLists.txt  Kconfig  audio_driver.c  idf_component.yml
components/audio_play/include/: audio_driver.h
components/bsp_esp32_c6_touch_lcd_1_83/: CMakeLists.txt  idf_component.yml
components/bsp_esp32_c6_touch_lcd_1_83/boards/: bsp_board.c
components/bsp_esp32_c6_touch_lcd_1_83/codec/: bsp_codec.c
components/bsp_esp32_c6_touch_lcd_1_83/include/: bsp_board.h
components/bsp_esp32_c6_touch_lcd_1_83/peripherals/: bsp_axp2101.cpp  bsp_i2c_master.c  bsp_i2s.c  bsp_imu.c  bsp_lcd.c  bsp_lvgl_display.c  bsp_rtc.c  bsp_sdcard.c  bsp_touch.c  bsp_wifi_port.c
components/net_api/: CMakeLists.txt  Kconfig  net_api.c
components/net_file/: CMakeLists.txt  net_file.c
components/net_mqtt/: CMakeLists.txt  Kconfig  net_mqtt.c
components/net_tcp/: CMakeLists.txt  net_tcp.c
components/power_manager/: CMakeLists.txt  Kconfig  power_manager.c
components/sd_file/: CMakeLists.txt  sd_file.c
components/sd_logger/: CMakeLists.txt  Kconfig  sd_logger.c
components/time_sync/: CMakeLists.txt  Kconfig  time_sync.c
components/wifi_manager/: CMakeLists.txt  Kconfig  (+1 more)
main/: CMakeLists.txt  Examplemochianimation.txt  Kconfig.projbuild  check_board_buttons_example.c  main.cpp  mochi_asset_setup.c  sdcard_player.c  sdcard_player.h
main/240_284/dark/: app_launcher_data.hpp  core_data.hpp  gesture_data.hpp  main_bg_240_284.c  navigation_bar_data.hpp  recents_screen_data.hpp  status_bar_data.hpp  stylesheet.hpp
main/assets/: assets.h
main/assets/images/: icon_sample_16x16.c
main/assets/music/: README.txt  weee-hahaha-oh_USrcQ9x.aup3-shm  weee-hahaha-oh_USrcQ9x.aup3-wal
main/assets/sounds/: beep_8k_mono.c
(+32 files in other folders)
